[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "timofei_gruzdev_1", email = "gruzdewt@yandex.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "httpx>=0.28.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

